--- a/src/savbilldb.properties
+++ b/src/savbilldb.properties
@@ -10,10 +10,10 @@ IPHT=192.168.0.159
 DATABASE=nadeem
 DATABASEHT=nadeem
 # username for database
-USER=clb
+USER=sav
 USERHT=htclb
 # password for database
-PASS=clb
+PASS=sav
 PASSHT=htclb
 # port name
 PORT=1521
