list bill details print

--- a/src/savbilldb.properties
+++ b/src/savbilldb.properties
@@ -10,10 +10,10 @@ IPHT=localhost
 DATABASE=ravi
 DATABASEHT=ravi
 # username for database
-USER=sav
+USER=clb
 USERHT=htclb
 # password for database
-PASS=sav
+PASS=clb
 PASSHT=htclb
 # port name
 PORT=1521
