property file ignore

--- a/src/savbilldb.properties
+++ b/src/savbilldb.properties
@@ -7,8 +7,8 @@
 IP=localhost
 IPHT=localhost
 # Database name
-DATABASE=ravi
-DATABASEHT=ravi
+DATABASE=nadeem
+DATABASEHT=nadeem
 # username for database
 USER=sav
 USERHT=htclb
