IGNORE PROPERTIES FILE

--- a/src/savbilldb.properties
+++ b/src/savbilldb.properties
@@ -4,16 +4,17 @@
 # Also if any changes to parameters are to be edited here.  
 
 # Hostname/Ipaddress of database running
-IP=localhost
+#IP=localhost
+IP=DESKTOP-AKSCB29
 IPHT=localhost
 # Database name
 DATABASE=nadeem
 DATABASEHT=nadeem
 # username for database
-USER=clb
+USER=sav
 USERHT=htclb
 # password for database
-PASS=clb
+PASS=sav
 PASSHT=htclb
 # port name
 PORT=1521
