--- a/src/jasperreports.properties
+++ b/src/jasperreports.properties
@@ -247,7 +247,7 @@ net.sf.jasperreports.javascript.class.compiler.expressions.per.script=128
 net.sf.jasperreports.javascript.class.compiler.script.max.size=8196
 
 #added BY Nadeem
-queryExecuter.1.language=plsql
-queryExecuter.1.class=com.jaspersoft.jrx.query.PlSqlQueryExecuterFactory
-queryExecuter.1.provider=com.jaspersoft.ireport.designer.data.fieldsproviders.SQLFieldsProvider
-net.sf.jasperreports.query.executer.factory.plsql=com.jaspersoft.jrx.query.PlSqlQueryExecuterFactory
+#queryExecuter.1.language=plsql
+#queryExecuter.1.class=com.jaspersoft.jrx.query.PlSqlQueryExecuterFactory
+#queryExecuter.1.provider=com.jaspersoft.ireport.designer.data.fieldsproviders.SQLFieldsProvider
+#net.sf.jasperreports.query.executer.factory.plsql=com.jaspersoft.jrx.query.PlSqlQueryExecuterFactory
