payment purpose wise report

--- a/src/savbilldb.properties
+++ b/src/savbilldb.properties
@@ -4,17 +4,17 @@
 # Also if any changes to parameters are to be edited here.  
 
 # Hostname/Ipaddress of database running
-#IP=localhost
-IP=DESKTOP-AKSCB29
+IP=localhost
+#IP=DESKTOP-AKSCB29
 IPHT=localhost
 # Database name
-DATABASE=nadeem
+DATABASE=ravi
 DATABASEHT=nadeem
 # username for database
-USER=sav
+USER=clb
 USERHT=htclb
 # password for database
-PASS=sav
+PASS=clb
 PASSHT=htclb
 # port name
 PORT=1521
