--- a/src/savbilldb.properties
+++ b/src/savbilldb.properties
@@ -8,13 +8,13 @@ IP=localhost
 #IP=DESKTOP-AKSCB29
 IPHT=localhost
 # Database name
-DATABASE=ravi
+DATABASE=nadeem
 DATABASEHT=nadeem
 # username for database
-USER=clb
+USER=sav
 USERHT=htclb
 # password for database
-PASS=clb
+PASS=sav
 PASSHT=htclb
 # port name
 PORT=1521
