--- a/src/savbilldb.properties
+++ b/src/savbilldb.properties
@@ -26,3 +26,4 @@ JDBC=jdbc:oracle:thin
 PATH=D:\\SCHEDULERS\\ECB\\
 #PATH=/home/cloudbill/bin/SCHEDULERS/
 REPORT_PATH=D:\\SAV-REPORTS\\
+REPORT_IMAGE_LOGO_NAME=mescom_logo.jpg
